Elasticsearch/elasticsearch-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
  namespace: elasticsearch-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      application: elasticsearch
      environement: demo
  serviceName: elasticsearch
  template:
    metadata:
      labels:
        application: elasticsearch
        environement: demo
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
              name: rest
              protocol: TCP
            - containerPort: 9300
              name: inter-node
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          name: es-cluster
          namespace: elasticsearch-demo
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: custom-azure-resizable
        resources:
          requests:
            storage: 25Gi
