Elasticsearch/elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
  namespace: elasticsearch-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ctv-tuto-k8s-elasticsearch.secureholiday.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elasticsearch
              servicePort: api
